--- a/searchcontent/index.html
+++ b/searchcontent/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -45,11 +45,14 @@
             <!-- /ko -->
             <h3 class="question-title with-icon" data-bind="text: question.title"></h3>
 
-            <!-- ko if: question.hasContent && question.type != 'fillInTheBlank' -->
-            <div class="question-content-wrapper">
-                <div class="question-content styled-content" data-bind="loadHtml: '../content/' + section.id + '/' + question.id + '/content.html?v=1453372455198'"></div>
-            </div>
+            <!-- ko if: question.questionInstructions.length > 0 -->
+            <ul class="question-content-wrapper">
+                <!-- ko foreach: question.questionInstructions -->
+                <li class="question-content styled-content" data-bind="loadHtml: '../content/' + section.id + '/' + question.id + '/' + id + '.html?v=1453372455198'"></li>
+                <!-- /ko -->
+            </ul>
             <!-- /ko -->
+
             <!-- ko if: question.type == 'singleSelectText' -->
             <ul class="question-answers-list" data-bind="foreach: question.answers">
                 <li class="radio">
