--- a/settings/design/branding.html
+++ b/settings/design/branding.html
@@ -17,6 +17,7 @@
     <!-- build:js js/design.min.js -->
     <script src="js/localize.js"></script>
     <script src="js/upload.js"></script>
+    <script src="js/URLHelper.js"></script>
     <script src="js/knockoutBindings.js"></script>
     <script src="js/models.js"></script>
     <script src="js/design.js"></script>
@@ -30,7 +31,14 @@
                 <header class="settings-item-title" data-bind="localize: 'custom course logo'">Custom course logo:</header>
                 <section class="settings-item-content">
                     <div class="flex direction-row logo-container">
-                        <input id="imgUrl" class="logo-url-input" type="text" placeholder="Paste image URL here..." data-bind="value: logo.url, valueUpdate: ['afterkeydown', 'afterpaste'], enable: userAccess.hasStarterPlan, event: { blur: saveChanges }" />
+                        <div class="flex direction-column">
+                            <input id="imgUrl" class="logo-url-input" type="text" placeholder="Paste image URL here..." data-bind="value: logo.url, valueUpdate: ['afterkeydown', 'afterpaste'], enable: userAccess.hasStarterPlan, event: { blur: logo.validateUrl }" />
+                            <!-- ko ifnot: logo.isValidUrl() -->
+                            <div class="error-container">
+                                <div class="error-title-container" data-bind="text: logo.errorText"></div>
+                            </div>
+                            <!-- /ko -->
+                        </div>
                         <span class="logo-help-text" data-bind="localize: 'or'">or</span>
                     </div>
                     <div class="flex direction-column logo-container">
@@ -47,7 +55,7 @@
                         <!-- ko if: logo.hasLogo -->
                         <div class="flex direction-row logo-image-container has-logo">
                             <figure class="flex direction-column logo-image-wrapper">
-                                <img class="template-logo" src="" alt="" data-bind="attr: {src: logo.url }" />
+                                <img class="template-logo" src="" alt="" data-bind="attr: {src: logo.logoUrl }" />
                             </figure>
                             <div class="btn-image-action-container">
                                 <button class="btn-image-action upload" data-bind="click: logo.upload">
