--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- build:js js/vendor.min.js -->
     <script src="vendor/components-webfontloader/webfontloader.js"></script>
     <script src="vendor/easygenerator-plugins/dist/plugins.js"></script>
-    <script src="vendor/jquery/dist/jquery.min.js"></script>
+    <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="js/jquery-ui/jquery-ui.js"></script>
     <script src="js/jquery-ui-touchpunch/jquery.ui.touch-punch.min.js"></script>
     <script src="vendor/knockout/dist/knockout.js"></script>
