fix: added chromeos support

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                 ios: {
                     safari: {},
                     chrome: {}
+                },
+                cros: {
+                    chrome: {}
                 }
             },
             mainAppContainerId: 'applicationHost',
